[package]
name = "tauri-app-ui"
version = "0.0.0"
edition = "2021"

[dependencies]
leptos = { version = "0.2", features = ["stable"] }
leptos_router = { version = "0.2.3", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
anyhow = "1.0.70"
serde_json = "1.0.94"
# cfg-if = "1.0.0"
# web-sys = { version = "0.3.61", features = ["AbortController", "AbortSignal"] }
reqwest = { version = "0.11.15", features = ["json"] }
# mangadex-api = { git = "https://github.com/Phoeenix05/mangadex-api.git" }
mangadex-api = { path = "../mangadex-api" }
uuid = "1.3.3"

