[package]
name = "tauri-app-ui"
version = "0.0.0"
edition = "2021"

[dependencies]
leptos = { version = "0.3.0", features = ["stable"] }
leptos_router = { version = "0.3.0", features = ["csr"] }

serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
serde_json = "1.0.94"

wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"

js-sys = "0.3"

# mangadex-api = { git = "https://github.com/Phoeenix05/mangadex-api.git" }
mangadex-api = { path = "../mangadex-api" }

uuid = "1.3.3"

reqwest = "0.11.18"

[workspace]
members = [
    "src-tauri"
]