[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.3.0", features = ["stable"] }
leptos_router = { version = "0.3.0", features = ["csr"] }

log = "0.4.17"
console_error_panic_hook = "0.1.7"

serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde-wasm-bindgen = "0.5.0"

js-sys = "0.3.63"
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"

uuid = "1.3.4"

[dependencies.mangadex-api]
git = "https://github.com/phoeenix05/mangadex-api"
# path = "../../mangadex-api"
rev = "b791b74"
default-features = false
